--- a/connectusainc.com/wp-content/themes/engitech/css/font/flaticon_mycollection.scss
+++ b/connectusainc.com/wp-content/themes/engitech/css/font/flaticon_mycollection.scss
@@ -2,11 +2,11 @@ $flaticon_mycollection-font: "flaticon_mycollection";
 
 @font-face {
     font-family: $flaticon_mycollection-font;
-    src: url("./flaticon_mycollection.woff2?9d59d2ba1c6dec49562e8612d8519d6b") format("woff2"),
-url("./flaticon_mycollection.woff?9d59d2ba1c6dec49562e8612d8519d6b") format("woff"),
-url("./flaticon_mycollection.eot?9d59d2ba1c6dec49562e8612d8519d6b#iefix") format("embedded-opentype"),
-url("./flaticon_mycollection.ttf?9d59d2ba1c6dec49562e8612d8519d6b") format("truetype"),
-url("./flaticon_mycollection.svg?9d59d2ba1c6dec49562e8612d8519d6b#flaticon_mycollection") format("svg");
+    src: url("./flaticon_mycollection.woff2?b840330f4947546d4e576cb7047cf69b") format("woff2"),
+url("./flaticon_mycollection.woff?b840330f4947546d4e576cb7047cf69b") format("woff"),
+url("./flaticon_mycollection.eot?b840330f4947546d4e576cb7047cf69b#iefix") format("embedded-opentype"),
+url("./flaticon_mycollection.ttf?b840330f4947546d4e576cb7047cf69b") format("truetype"),
+url("./flaticon_mycollection.svg?b840330f4947546d4e576cb7047cf69b#flaticon_mycollection") format("svg");
 }
 
 i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
@@ -24,10 +24,11 @@ $flaticon_mycollection-map: (
     "tablet": "\f101",
     "right-arrow": "\f102",
     "next": "\f103",
-    "search": "\f104",
-    "report": "\f105",
-    "up": "\f106",
-    "back": "\f107",
+    "report": "\f104",
+    "up": "\f105",
+    "back": "\f106",
+    "close": "\f107",
+    "search": "\f108",
 );
 
 .flaticon-tablet:before {
@@ -39,9 +40,6 @@ $flaticon_mycollection-map: (
 .flaticon-next:before {
     content: map-get($flaticon_mycollection-map, "next");
 }
-.flaticon-search:before {
-    content: map-get($flaticon_mycollection-map, "search");
-}
 .flaticon-report:before {
     content: map-get($flaticon_mycollection-map, "report");
 }
@@ -50,4 +48,10 @@ $flaticon_mycollection-map: (
 }
 .flaticon-back:before {
     content: map-get($flaticon_mycollection-map, "back");
+}
+.flaticon-close:before {
+    content: map-get($flaticon_mycollection-map, "close");
+}
+.flaticon-search:before {
+    content: map-get($flaticon_mycollection-map, "search");
 }
